Revert "CSS - player overflow-x not allowed for Firefox copy text issues"
This reverts commit bbef54f9d6c4ea35503f2961fabb138e868f2855.

--- a/css/flowplayer.css
+++ b/css/flowplayer.css
@@ -347,8 +347,7 @@
   font-size: 16px;
   position: relative;
   max-height: 100%;
-  overflow-x: hidden;
-  overflow-y: visible;
+  overflow: visible;
   border-radius: .24em;
   background-position: center;
   background-repeat: no-repeat;
